Prueba deploy automático

--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,7 @@
         <div class="hero-content">
             <p class="subtitle">BIENVENIDO A NOBA</p>
             <h1>Sistema de <br>Servicios Generales</h1>
-            <h1>Sistema de Servicios - prueba deploy automático</h1>
+            <h1>Sistema  - prueba deploy automático</h1>
 
             <p class="description">
                 Conecta con expertos verificados de forma rápida y segura mediante validación avanzada.
@@ -75,7 +75,7 @@
             </div>
 
             <button class="btn-access" onclick="startScan()">INICIAR RECONOCIMIENTO</button>
-            <button class="btn-login-manual" onclick="location.href='{{ url_for('login_page') }}'">INICIAR SESIÓN</button>
+            <button class="btn-login-manual" onclick="location.href=''">INICIAR SESIÓN</button>
 
             <a href="#" class="link-alt">¿Olvidó su contraseña?</a>
         </div>
