--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,10 @@
         <div class="hero-content">
             <p class="subtitle">BIENVENIDO A NOBA</p>
             <h1>Sistema de <br>Servicios Generales</h1>
-         <h1>DEPLOY AUTOMÁTICO FUNCIONANDO EN RENDER</h1>
+         <h1 style="color:green">
+DEPLOY OK - 2026
+</h1>
+
 
             <p class="description">
                 Conecta con expertos verificados de forma rápida y segura mediante validación avanzada.
